--- a/functions/package.json
+++ b/functions/package.json
@@ -10,16 +10,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "14"
+    "node": "12"
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.21.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "googleapis": "^74.2.0",
-    "graphql-request": "^3.4.0",
-    "kikstart-graphql-client": "^1.5.0"
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
