--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,19 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
-  },
-  "devDependencies": {
+    "axios": "^0.21.1",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.2.0"
+    "firebase": "^8.10.0",
+    "firebase-admin": ">=9.8.0",
+    "firebase-functions": ">=3.14.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",+
+    "kikstart-graphql-client": "^1.5.0",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "^0.2.3"
   },
   "private": true
 }
