--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,7 @@
     "firebase-admin": ">=9.8.0",
     "firebase-functions": ">=3.14.0",
     "graphql": "^15.5.1",
-    "graphql-request": "^3.5.0",+
+    "graphql-request": "^3.5.0",
     "kikstart-graphql-client": "^1.5.0",
     "moment": "^2.29.1"
   },
