--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "index.js",
   "dependencies": {
@@ -19,7 +19,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "firebase": "^8.10.0",
     "firebase-admin": "^9.11.1",
-    "firebase-functions": ">=3.14.0",
+    "firebase-functions": "^3.15.7",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "kikstart-graphql-client": "^1.5.0",
